--- a/ProTW/composer.json
+++ b/ProTW/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "yajra/laravel-oci8": "5.4.*"
+        "yajra/laravel-oci8": "5.4.*",
+        "cornford/googlmapper": "2.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
