--- a/ProTW/composer.json
+++ b/ProTW/composer.json
@@ -6,10 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "barryvdh/laravel-cors": "^0.9.2",
+        "cornford/googlmapper": "2.*",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "yajra/laravel-oci8": "5.4.*",
-        "cornford/googlmapper": "2.*"
+        "yajra/laravel-oci8": "5.4.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
